--- a/index.html
+++ b/index.html
@@ -1,32 +1,19 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Joy Choa</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <script src="main.js"></script>
-</head>
-<body>
-    <div class="wrapper">
-        <div class="header">
-            <div class="left">
-                -----
-            </div>
-            <div class="right">
-                -----
-            </div>
+
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+        <div class = "container">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>7</div>
+            <div>8</div>
         </div>
-        <div class="footer">
-            <div> </div>
-            <div>About</div>
-            <div>Help Center</div>
-            <div>Blog</div>
-            <div>Status</div>
-            <div>Jobs</div>
-            <div> </div>
-        </div>
-    </div>
-</body>
+    </body>    
 </html>
